--- a/app/src/main/res/values-nl/strings.xml
+++ b/app/src/main/res/values-nl/strings.xml
@@ -1,137 +1,137 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="alpha_create_wallet">Write these words down and keep them safe. Do not lose these words or forget your passphrase.</string>
-    <string name="alpha_create_confirm_backup">I\'ve written down my words</string>
+    <string name="alpha_create_wallet">Noteer deze woorden en bewaar ze zorgvuldig. Do not lose these words or forget your passphrase.</string>
+    <string name="alpha_create_confirm_backup">Ik heb de woorden genoteerd</string>
 
-    <string name="creating_wallet">Creating wallet. Please wait...</string>
-    <string name="restoring_wallet">Restoring wallet. Please wait...</string>
-    <string name="decrypting_bip38">Decrypting BIP38 password. Please wait...</string>
+    <string name="creating_wallet">Portemonnee aanmaken. Een moment geduld a.u.b.</string>
+    <string name="restoring_wallet">Portemonnee terugzetten. Een moment geduld a.u.b.</string>
+    <string name="decrypting_bip38">BIP38 wachtwoord decrypten. Een moment geduld a.u.b.</string>
 
-    <string name="action_settings">Settings</string>
+    <string name="action_settings">Instellingen</string>
     <string name="action_support">Support</string>
-    <string name="action_sweep">Sweep private key</string>
+    <string name="action_sweep">Privesleutel binnenhalen</string>
     <string name="action_bip47">PayNyms</string>
-    <string name="action_unarchive">Activate all archived payment codes</string>
-    <string name="action_sync_all">Sync all payment codes</string>
+    <string name="action_unarchive">Activate alle archiveerde betaalcodes</string>
+    <string name="action_sync_all">Synchroniseer alle betaalcodes</string>
 
-    <string name="about_us">About Samourai Wallet</string>
+    <string name="about_us">Over Samourai Wallet</string>
 
     <string name="ok">OK</string>
-    <string name="cancel">Cancel</string>
+    <string name="cancel">Annuleren</string>
 
-    <string name="options_cat_prefs">Block explorer</string>
+    <string name="options_cat_prefs">Blockverkenner</string>
     <string name="options_cat_stealth">Stealth</string>
-    <string name="options_cat_remote">Remote</string>
-    <string name="options_cat_wallet">Wallet</string>
-    <string name="options_cat_networking">Networking</string>
-    <string name="options_cat_other">About</string>
+    <string name="options_cat_remote">Afstandsbediening</string>
+    <string name="options_cat_wallet">Portemonnee</string>
+    <string name="options_cat_networking">Netwerken</string>
+    <string name="options_cat_other">Over</string>
 
-    <string name="options_mnemonic">Show mnemonic</string>
-    <string name="options_mnemonic2">Show 12-word seed for this wallet.</string>
-    <string name="options_xpub">Show BIP44 XPUB</string>
-    <string name="options_xpub2">Show extended public key for BIP44 account.</string>
-    <string name="options_xpub49">Show Segwit YPUB</string>
-    <string name="options_xpub49_2">Show extended public key for BIP49 Segwit account (P2SH-wrapped).</string>
-    <string name="options_xpub84">Show Segwit ZPUB</string>
-    <string name="options_xpub84_2">Show extended public key for BIP84 Segwit account (Bech32).</string>
-    <string name="options_wipe">Secure erase wallet</string>
-    <string name="options_wipe2">Securely erase this wallet from the device.</string>
-    <string name="options_stealth_display">Stealth launcher</string>
-    <string name="options_stealth_display2">Remove Samourai from the launcher and home screen. You must dial **YOUR_PIN_CODE# from the phone dialer to launch Samourai.</string>
-    <string name="options_remote_commands">Enable remote commands</string>
-    <string name="options_remote_commands2">Allow remote commands via SMS.</string>
-    <string name="options_currency">Street price</string>
-    <string name="options_currency2">Choose your exchange and local fiat currency.</string>
-    <string name="options_blockexplorer">Block explorer</string>
-    <string name="options_blockexplorer2">The block explorer used to view transaction details.</string>
-    <string name="options_sim_switch">SIM switch defense</string>
-    <string name="options_sim_switch2">Send SMS to a trusted mobile number when the SIM card is changed.</string>
-    <string name="options_use_telno">Use trusted mobile number for remote</string>
-    <string name="options_use_telno2">Only allow remote commands sent from your trusted mobile phone number.</string>
-    <string name="options_alert_telno">Trusted number</string>
-    <string name="options_alert_telno2">A trusted mobile number that you can restrict remote access to (use int\'l format without spaces ex.: +447385555555).</string>
+    <string name="options_mnemonic">Toon geheugensteun</string>
+    <string name="options_mnemonic2">Toon de 12-woorden seed voor deze portemonnee.</string>
+    <string name="options_xpub">Toon BIP44 XPUB</string>
+    <string name="options_xpub2">Toon uitgebreide publieke sleutel voor BIP44 account.</string>
+    <string name="options_xpub49">Toon Segwit YPUB</string>
+    <string name="options_xpub49_2">Toon uitgebreide publieke sleutel voor BIP49 Segwit account (P2SH-wrapped).</string>
+    <string name="options_xpub84">Toon Segwit ZPUB</string>
+    <string name="options_xpub84_2">Toon uitgebreide publieke sleutel voor BIP84 Segwit account (Bech32).</string>
+    <string name="options_wipe">Veilig portemonnee wissen</string>
+    <string name="options_wipe2">Wis deze portemonnee veilig van dit toestel.</string>
+    <string name="options_stealth_display">Stealth lanceren</string>
+    <string name="options_stealth_display2">Verwijder Samourai uit de lanceerder en het thuis scherm. U dient **YOUR_PIN_CODE# te bellen om Samourai te starten.</string>
+    <string name="options_remote_commands">Afstandscommando's toestaan</string>
+    <string name="options_remote_commands2">Toestaan van afstandscommando's via SMS.</string>
+    <string name="options_currency">Straatprijs</string>
+    <string name="options_currency2">Kies uw exchange en lokale fiat munteenheid.</string>
+    <string name="options_blockexplorer">Block verkenner</string>
+    <string name="options_blockexplorer2">De block verkenner die gebruikt wordt om transacties te verkennen.</string>
+    <string name="options_sim_switch">SIM wissel verdediging</string>
+    <string name="options_sim_switch2">Stuur een SMS naar een vertrouwd mobiele nummer wanneer de SIM kaart verandert.</string>
+    <string name="options_use_telno">Gebruik vertrouwde mobiele nummer voor afstandscommando's</string>
+    <string name="options_use_telno2">Gebruik alleen afstandscommando's verstuurd vanaf uw vertrouwde mobiele nummer.</string>
+    <string name="options_alert_telno">Vertrouwde mobiele nummer</string>
+    <string name="options_alert_telno2">Een vertrouwd mobiele nummer waar uw beperkte toegang voor kunt verlenen (gebruik int\'l formaat zonder spaties bijv.: +317385555555).</string>
     <string name="options_hash">APK hash</string>
-    <string name="options_hash2">Get SHA-256 hash of this installed APK file (can be copied to clipboard).</string>
+    <string name="options_hash2">SHA-256 hash van het geinstalleerde APK bestand opvragen (kan naar clipboard worden gekopieerd).</string>
     <string name="options_VPN">VPN</string>
-    <string name="options_VPN2">Launch OpenVPN for Android.</string>
-    <string name="options_Tor">Route via Tor?</string>
-    <string name="options_Tor2">Launch Orbot (Tor).</string>
-    <string name="options_export">Export wallet backup</string>
-    <string name="options_change_pin">Change PIN</string>
-    <string name="options_change_pin2">Define a new PIN code; used to unlock your wallet.</string>
-    <string name="options_remote_pin">Stealth launch and remote PIN</string>
-    <string name="options_remote_pin2">Define alternative PIN for stealth launch and remote functions.</string>
-    <string name="options_autosave_backup">Autosave backup to device storage</string>
-    <string name="options_autosave_backup2">Periodically save passphrase encrypted backup to device storage.</string>
-    <string name="options_version">Version</string>
-    <string name="options_txs">Transactions</string>
-    <string name="options_boltzmann">STONEWALL spend</string>
-    <string name="options_boltzmann_2">Spends will use STONEWALL algorithm for increased obfuscation.</string>
-    <string name="options_utxo">Show unspent outputs</string>
-    <string name="options_trusted_node">Set trusted node</string>
-    <string name="options_trusted_node2">Specify your own bitcoin node to broadcast transactions.</string>
-    <string name="options_use_trusted_node">Use trusted node</string>
-    <string name="options_use_trusted_node2">Broadcast transactions from your own node.</string>
-    <string name="options_rbf0">Spend using RBF</string>
-    <string name="options_rbf0_2">Spends will use replace-by-fee to enable fee bumping.</string>
-    <string name="options_troubleshoot">Troubleshoot</string>
+    <string name="options_VPN2">OpenVPN voor Android starten.</string>
+    <string name="options_Tor">Routeren via Tor?</string>
+    <string name="options_Tor2">Orbot (Tor) starten.</string>
+    <string name="options_export">Exporteer portemonnee backup</string>
+    <string name="options_change_pin">Verander PIN</string>
+    <string name="options_change_pin2">Een nieuwe PIN code ingeven; om uw portemonnee mee te openen.</string>
+    <string name="options_remote_pin">Stealth lanceren en afstands-PIN</string>
+    <string name="options_remote_pin2">Alternatieve PIN opgeven om stealth te lanceren en afstandsfuncties uit te voeren</string>
+    <string name="options_autosave_backup">Automatische backups naar apparaatopslag</string>
+    <string name="options_autosave_backup2">Periodiek opslaan van een met passphrase geencrypte backup naar apparaatopslag instellen.</string>
+    <string name="options_version">Versie</string>
+    <string name="options_txs">Transacties</string>
+    <string name="options_boltzmann">STONEWALL uitgaves</string>
+    <string name="options_boltzmann_2">Uitgaves gebruiken STONEWALL algorithme voor verbeterde obfuscatie.</string>
+    <string name="options_utxo">Toon niet-uitgegeven outputs</string>
+    <string name="options_trusted_node">Vertrouwde knooppunt instellen</string>
+    <string name="options_trusted_node2">Specifieer uw eigen bitcoin knooppunt om transacties mee kenbaar te maken.</string>
+    <string name="options_use_trusted_node">Gebruik vertrouwde knooppunt</string>
+    <string name="options_use_trusted_node2">Transacties kenbaar maken vanaf uw eigen knooppunt.</string>
+    <string name="options_rbf0">Uitgeven middels RBF</string>
+    <string name="options_rbf0_2">Uitgaves gebruiken replace-by-fee om de fee te kunnen verhogen.</string>
+    <string name="options_troubleshoot">Probleemoplossing</string>
     <string name="options_passphrase_test">Passphrase/backup test</string>
-    <string name="options_passphrase_test2">Verify wallet access and backup support.</string>
-    <string name="options_send_backup_to_support">Send backup to tech support</string>
-    <string name="options_send_backup_to_support2">Send wallet backup to tech support. Does not contain private key info.</string>
-    <string name="options_fee_provider">Fee Estimation Source</string>
-    <string name="options_fee_provider2">Select your preferred transaction fee estimation provider.</string>
-    <string name="options_broadcast_on">Broadcast transactions</string>
-    <string name="options_broadcast_on2">Uncheck (broadcasting OFF) to copy raw signed transaction to the clipboard.</string>
-    <string name="options_segwit">Receive to segwit addresses</string>
-    <string name="options_segwit_2">Generate segwit addresses for incoming transactions.</string>
-    <string name="options_broadcast_hex">Broadcast transaction hex</string>
-    <string name="options_broadcast_hex2">Broadcast signed transaction supplied in hex format.</string>
-    <string name="options_like_typed_change">Receive change to like-typed outputs</string>
-    <string name="options_like_typed_change2">Receive change to same type of address as spend output. Turn OFF to receive only to segwit change addresses.</string>
-    <string name="options_haptic">Haptic PIN entry</string>
-    <string name="options_haptic_2">Vibrate each digit on PIN code entry.</string>
-    <string name="options_prune">Prune backup</string>
-    <string name="options_prune2">Prune wallet payload and backup files.</string>
-    <string name="options_address_calc">Address calculator</string>
-    <string name="options_address_calc2">Calculate addresses derived from your wallet seed.</string>
+    <string name="options_passphrase_test2">Verifieer toegang tot portemonnee en backup ondersteuning.</string>
+    <string name="options_send_backup_to_support">Stuur backup naar technische ondersteuning</string>
+    <string name="options_send_backup_to_support2">Stuur backup naar technische ondersteuning. Bevat geen informatie over uw privesleutel.</string>
+    <string name="options_fee_provider">Bron fee-schattingen</string>
+    <string name="options_fee_provider2">Kies uw voorkeursleverancier voor transactie-feeschatting.</string>
+    <string name="options_broadcast_on">Transacties kenbaar maken</string>
+    <string name="options_broadcast_on2">Zet uit (kenbaar maken UIT) om de ruwe, getekende transactiedata naar het clipboard te kopieeren.</string>
+    <string name="options_segwit">Ontvangen op segwit adressen</string>
+    <string name="options_segwit_2">Genereer segwit adressen voor inkomende transacties.</string>
+    <string name="options_broadcast_hex">Transactie hex kenbaar maken</string>
+    <string name="options_broadcast_hex2">Getekende transacties in hex formaat kenbaar maken.</string>
+    <string name="options_like_typed_change">Ontvang wisselgeld in gelijksoortige outputs</string>
+    <string name="options_like_typed_change2">Ontvang wisselgeld in gelijksoortig formaat als adres van uitgegeven output. Zet UIT om enkek in segwit wisselgeld adressen te ontvangen.</string>
+    <string name="options_haptic">Haptische PIN invoer</string>
+    <string name="options_haptic_2">Vibreer bij elke toetsaanslag bij invoer PIN code.</string>
+    <string name="options_prune">Backup uitkleden</string>
+    <string name="options_prune2">Kleed backup-portemonneeinhoud en backupbestanden uit.</string>
+    <string name="options_address_calc">Adrescalculator</string>
+    <string name="options_address_calc2">Bereken adressen afgeleid uit uw portemonnee seed.</string>
     <string name="options_paynym_calc">PayNym calculator</string>
-    <string name="options_paynym_calc2">Calculate addresses shared with other PayNyms.</string>
+    <string name="options_paynym_calc2">Bereken adressen gedeeld met andere PayNyms.</string>
 
-    <string name="prompt_send_backup_to_support">Send wallet backup to tech support? Does not include any private key, seed, or passphrase info.</string>
+    <string name="prompt_send_backup_to_support">Backup portemonnee naar technische ondersteuning sturen? Bevat geen privesleutel, seed, of passphraseinformatie.</string>
 
-    <string name="timeline_today">Today</string>
-    <string name="timeline_older">Older</string>
+    <string name="timeline_today">Vandaag</string>
+    <string name="timeline_older">Ouder</string>
 
-    <string name="tx_sent">Transaction sent</string>
-    <string name="tx_failed">Error sending transaction</string>
-    <string name="you_received">Received</string>
-    <string name="you_sent">Sent</string>
-    <string name="send">Send</string>
-    <string name="receive">Receive</string>
-    <string name="cannot_select_utxo">Cannot select unspent outputs</string>
-    <string name="error_bip126_output">Error determining output address</string>
-    <string name="error_change_output">Error determining change address</string>
+    <string name="tx_sent">Transactie verstuurd</string>
+    <string name="tx_failed">Fout bij versturen transactie</string>
+    <string name="you_received">Ontvangen</string>
+    <string name="you_sent">Verstuurd</string>
+    <string name="send">Versturen</string>
+    <string name="receive">Ontvangen</string>
+    <string name="cannot_select_utxo">Kan geen niet-uitgegeven outputs selecteren</string>
+    <string name="error_bip126_output">Fout bij bepalen outputadres</string>
+    <string name="error_change_output">Fout bij bepalen wisselgeldadres</string>
 
-    <string name="copied_to_clipboard">Copied to clipboard</string>
-    <string name="send_payment_code">Send payment code</string>
+    <string name="copied_to_clipboard">Naar clipboard gekopieerd</string>
+    <string name="send_payment_code">Stuur naar betaalcode</string>
 
-    <string name="ask_you_sure_exit">Are you sure you want to exit Samourai?</string>
-    <string name="yes">Yes</string>
-    <string name="no">No</string>
-    <string name="close">Close</string>
+    <string name="ask_you_sure_exit">Weet u zeker dat u Samourai wilt verlaten?</string>
+    <string name="yes">Ja</string>
+    <string name="no">Nee</string>
+    <string name="close">Sluiten</string>
 
-    <string name="sim_warning">Your Samourai Wallet device now has a different SIM card corresponding to incoming number of this text message.</string>
+    <string name="sim_warning">Uw Samourai Wallet apparaat bevat nu een andere SIM kaart die overeenkomt met het nummer van dit tekstbericht.</string>
 
-    <string name="pin_5_8">Create a PIN code between 5 and 8 characters.</string>
-    <string name="pin_5_8_confirm">Confirm PIN code</string>
-    <string name="pin_error">Pin code error</string>
-    <string name="no_internet">No Internet connectivity. Please try again.</string>
-    <string name="bip38_pw">BIP38 password</string>
-    <string name="bip38_pw_error">BIP38 password error</string>
-    <string name="bip39_safe">Please create a passphrase and keep it secret. You will need this passphrase if you lose access to your wallet.</string>
-    <string name="bip39_safe2">Please confirm your passphrase. Keep it secret. You will need this passphrase if you lose access to your wallet.</string>
+    <string name="pin_5_8">Maak een PIN code aan van 5 tot 8 characters.</string>
+    <string name="pin_5_8_confirm">Bevestig PIN code</string>
+    <string name="pin_error">Foutieve Pin code</string>
+    <string name="no_internet">Geen internetverbinding. Probeer opnieuw.</string>
+    <string name="bip38_pw">BIP38 wachtwoord</string>
+    <string name="bip38_pw_error">Foutief BIP38 wachtwoord</string>
+    <string name="bip39_safe">Maak a.u.b. een passphrase aan en houdt deze geheim. U heeft deze passphrase nodig wanneer u toegang tot uw portemonnee verliest.</string>
+    <string name="bip39_safe2">Bevestig a.u.b. uw passphrase. Houdt deze geheim. U heeft deze passphrase nodig wanneer u toegang tot uw portemonnee verliest.</string>
     <string name="bip39_restore">Enter your mnemonic (or hex entropy) and, if necessary, your BIP39 passphrase. If you do not use a BIP39 passphrase, leave it blank.</string>
     <string name="bip39_must">Your wallet must use a passphrase. Please try again.</string>
     <string name="bip39_unmatch">Passphrase does not match. Please try again.</string>
