--- a/app/src/main/res/values-nl/strings.xml
+++ b/app/src/main/res/values-nl/strings.xml
@@ -305,19 +305,19 @@
 
     <string name="pushtx_returns_null">Uitgave mislukt. Server gaf null terug.</string>
 
-    <string name="trusted_node">Trusted node</string>
-    <string name="trusted_node_user_hint">rpc user name</string>
-    <string name="trusted_node_ip_hint">IP address</string>
-    <string name="trusted_node_port_hint">Port (8332 default)</string>
-    <string name="trusted_node_password_hint">rpc user password</string>
-    <string name="trusted_node_not_valid">Please supply valid info for your trusted node.</string>
-    <string name="trusted_node_ko">Trusted node not recognized. Please check installation.</string>
-    <string name="trusted_node_error">Error reaching proposed trusted node.</string>
-    <string name="trusted_node_tx_error">Transaction failed on trusted node.</string>
-    <string name="trusted_node_not_core_131">Trusted node is set. Note that Samourai Wallet supports Bitcoin Core 0.13.1 and over.</string>
-    <string name="trusted_node_tx_sent">Transaction sent via trusted node.</string>
-    <string name="trusted_node_not_responding">Trusted node not responding. Please check installation.</string>
-    <string name="trusted_node_breaks_consensus">Trusted node cannot be set on a bitcoin client that breaks consensus.</string>
+    <string name="trusted_node">Vertrouwde knooppunt</string>
+    <string name="trusted_node_user_hint">rpc gebruikersnaam</string>
+    <string name="trusted_node_ip_hint">IP-adres</string>
+    <string name="trusted_node_port_hint">Poort (8332 standaard)</string>
+    <string name="trusted_node_password_hint">rpc gebruiker's wachtwoord</string>
+    <string name="trusted_node_not_valid">Lever a.u.b. geldige informatie voor uw vertrouwde knooppunt.</string>
+    <string name="trusted_node_ko">Vertrouwde knooppunt niet herkend. Check a.u.b. installatie.</string>
+    <string name="trusted_node_error">Fout bij bereiken voorgestelde vertrouwde knooppunt.</string>
+    <string name="trusted_node_tx_error">Transactiefout bij vertrouwde knooppunt.</string>
+    <string name="trusted_node_not_core_131">Vertrouwde knooppunt is ingesteld. Noot: Samourai Wallet ondersteund Bitcoin Core 0.13.1 and hoger.</string>
+    <string name="trusted_node_tx_sent">Transactie verstuurd via vertrouwde knooppunt.</string>
+    <string name="trusted_node_not_responding">Vertrouwde knooppunt reageert niet. Check a.u.b. installatie.</string>
+    <string name="trusted_node_breaks_consensus">Vertrouwde knooppunt kan niet gezet worden op een bitcoin client die consensus breekt.</string>
 
     <string name="refresh_tx_pre">Retrieving transactions and balance.</string>
     <string name="refresh_tx">Retrieved transactions and balance.</string>
@@ -560,19 +560,19 @@
         <item>Legacy (P2PKH)</item>
     </string-array>
 
-    <string name="in_offline_mode">Samourai Wallet is in offline mode.</string>
-    <string name="tx_standby">Transaction in stand-by</string>
-    <string name="show_hex">Display Hex Code</string>
-    <string name="tx_tenna_coming_soon">txTenna on Android coming soon</string>
+    <string name="in_offline_mode">Samourai Wallet is in offline modus.</string>
+    <string name="tx_standby">Transactie in stand-by</string>
+    <string name="show_hex">Hexcode weergeven</string>
+    <string name="tx_tenna_coming_soon">txTenna op Android komt binnenkort</string>
     <string name="enter_paynym">PayNym</string>
     <string name="enter_index">Index</string>
 
-    <string name="receive_addresses">Receive addresses</string>
-    <string name="send_addresses">Send addresses</string>
-    <string name="display_receive_redeem">Receive redeem script</string>
-    <string name="display_receive_privkey">Receive private key</string>
-    <string name="invalid_index">Invalid index</string>
-    <string name="type_address">Type of address</string>
+    <string name="receive_addresses">Ontvangstadressen</string>
+    <string name="send_addresses">Verzendadressen</string>
+    <string name="display_receive_redeem">Ontvangstverlossingsscript</string>
+    <string name="display_receive_privkey">Ontvangsprivesleutel</string>
+    <string name="invalid_index">Ongeldige index</string>
+    <string name="type_address">Adrestype</string>
 
     <string-array name="account_types">
         <item>BIP49 Segwit</item>
@@ -583,14 +583,14 @@
         <item>Whirlpool Segwit post-mix</item>
     </string-array>
 
-    <string name="chain_id">Address chain</string>
-    <string name="receive_chain">Receive address</string>
-    <string name="change_chain">Change address</string>
+    <string name="chain_id">Adresketen</string>
+    <string name="receive_chain">Ontvangstadres</string>
+    <string name="change_chain">Wisselgeldadres</string>
     <string name="whirlpool_postmix">Whirlpool Segwit post-mix</string>
-    <string name="encrypted_backup_detected">Encrypted backup detected</string>
-    <string name="restore">RESTORE</string>
-    <string name="request_amount">Request Amount</string>
-    <string name="address_type">Address Type</string>
-    <string name="path">Path</string>
+    <string name="encrypted_backup_detected">Geencrypte backup verwijderd</string>
+    <string name="restore">HERSTEL</string>
+    <string name="request_amount">Verzoekbedrag</string>
+    <string name="address_type">Adrestype</string>
+    <string name="path">Pad</string>
 
 </resources>
